--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "express": "^4.19.2",
+    "moment": "^2.30.1",
     "mssql": "^10.0.2",
     "nodemon": "^3.1.1",
+    "pm2": "^5.4.2",
     "prettier": "^3.2.5"
   }
 }
